fixed content spacing in profile html

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -612,6 +612,12 @@ details {
   }
 }
 
+.-info {
+  > li {
+    padding: 15px 5px;
+  }
+}
+
 
 @media (max-width: 768px) {
   body {
